Change to a stop-watch way to continuously monitoring & update usage. Hope chrome could stop the watch while it's minimixed.

--- a/popup.html
+++ b/popup.html
@@ -5,10 +5,11 @@
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="sidekick.js"></script>
 	<script type="text/javascript" src="datetime.js"></script>
+	<script type="text/javascript" src="stopwatch.js"></script>
 	<script type="text/javascript" src="popup.js"></script>
 </head>
 <body>
-	<div id="current_usage" style="width: 320px" height="640px">
+	<div id="current_usage" style="width: 320px" height="240px">
 		<div id="today_usage" style="text-align:center"></div>
 		<div id="fb_minutes" style="text-align:center"></div>
 		<div id="friendly_reminder" style="text-align:center"></div>
