Update README Save daily usage into local storage

--- a/background.html
+++ b/background.html
@@ -7,10 +7,10 @@
 	<script type="text/javascript" src="stopwatch.js"></script>
 	<script type="text/javascript" src="background.js"></script>
 </head>
-	<body onload="show();">
+	<!-- <body onload="show();"> -->
 	<!-- <div>Time: <span id="time"></span></div>
 	<input type="button" value="start" onclick="start();">
 	<input type="button" value="stop" onclick="stop();">
 	<input type="button" value="reset" onclick="reset()"> -->
-</body>
+<!-- </body> -->
 </html>
