Fix the issue of popup dialog not showing the correct suggestion message. Fix the issue of can't properly start tracking while chrome window focus change. Fix the issue of popup dialog not showing correct date.

--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,24 @@
 <html>
+
 <head>
-	<link type="text/css" rel="stylesheet" href="ios7.css" />
-	<link type="text/css" rel="stylesheet" href="define.css" />
-	<script type="text/javascript" src="jquery.min.js"></script>
-	<script type="text/javascript" src="sidekick.js"></script>
-	<script type="text/javascript" src="datetime.js"></script>
-	<script type="text/javascript" src="stopwatch.js"></script>
-	<script type="text/javascript" src="popup.js"></script>
+    <link type="text/css" rel="stylesheet" href="ios7.css" />
+    <link type="text/css" rel="stylesheet" href="define.css" />
+    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="sidekick.js"></script>
+    <script type="text/javascript" src="datetime.js"></script>
+    <script type="text/javascript" src="stopwatch.js"></script>
+    <script type="text/javascript" src="popup.js"></script>
+    <!-- <script src="google-analytics-bundle.js"></script> -->
 </head>
+
 <body>
-	<div id="current_usage" style="width: 320px" height="240px">
-		<div id="today_usage" style="text-align:center"></div>
-		<div id="fb_minutes" style="text-align:center"></div>
-		<div id="friendly_reminder" style="text-align:center"></div>
-	</div>
-	<button id="reset_usage">Reset Usage</button>
+    <div id="current_usage" style="text-align:center; width:270px; height:240px">
+        <div id="today_str" style="text-align:center"></div>
+        <div id="today_usage" style="text-align:center"></div>
+        <div id="fb_minutes" style="text-align:center"></div>
+        <div id="friendly_reminder" style="text-align:center"></div>
+    </div>
+    <!-- <button id="reset_usage">Reset Usage</button> -->
 </body>
+
 </html>
