--- a/background.html
+++ b/background.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
+	<!-- <script type="text/javascript" src="google-analytics-bundle.js"></script> -->
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="sidekick.js"></script>
 	<script type="text/javascript" src="datetime.js"></script>
