Fix Content Policy problem with updated jquery Update README

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
     <link type="text/css" rel="stylesheet" href="ios7.css" />
     <link type="text/css" rel="stylesheet" href="define.css" />
-    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="sidekick.js"></script>
     <script type="text/javascript" src="datetime.js"></script>
     <script type="text/javascript" src="stopwatch.js"></script>
