--- a/background.html
+++ b/background.html
@@ -1,17 +1,11 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<!-- <script type="text/javascript" src="google-analytics-bundle.js"></script> -->
-	<script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="sidekick.js"></script>
 	<script type="text/javascript" src="datetime.js"></script>
 	<script type="text/javascript" src="stopwatch.js"></script>
 	<script type="text/javascript" src="background.js"></script>
 </head>
-	<!-- <body onload="show();"> -->
-	<!-- <div>Time: <span id="time"></span></div>
-	<input type="button" value="start" onclick="start();">
-	<input type="button" value="stop" onclick="stop();">
-	<input type="button" value="reset" onclick="reset()"> -->
-<!-- </body> -->
+	
 </html>
