--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
 	<title>Options for Facebook Usage Limit</title>
 	<link type="text/css" rel="stylesheet" href="ios7.css" />
 	<link rel="stylesheet" type="text/css" href="define.css">
-	<script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="options.js"></script>
 </head>
 <body>
